<resources>
    <string name="app_name" translatable="false">SafePlace</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="facebook_app_id">2244077282514695</string>
    <string name="fb_login_protocol_scheme">fb2244077282514695</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="prompt_username" translatable="false">Username</string>
    <string name="action_sign_in" translatable="false">Sign in</string>
    <string name="register" translatable="false">Sign up</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="title_activity_main_menu" translatable="false">MainMenu</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="add_safe_not_safe_place" translatable="false">ADD SAFE/NOT SAFE PLACE</string>
    <string name="search_for_safe_not_safe_places_around" translatable="false">SEARCH FOR SAFE/NOT SAFE PLACES</string>
    <string name="top_safe_not_safe_places" translatable="false">TOP SAFE/NOT SAFE PLACES</string>
    <string name="logout" translatable="false">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="safePlace" translatable="false">Safe</string>
    <string name="notSafe" translatable="false">Not safe</string>
    <string name="add_place" translatable="false">ADD PLACE</string>
    <string name="traffic_accidents" translatable="false">Traffic accidents</string>
    <string name="mark_area" translatable="false">Mark area</string>
    <string name="possibility_of_amenities_or_dangers" translatable="false">Possibility of amenities or dangers</string>
    <string name="kidnapping" translatable="false">Kidnapping</string>
    <string name="homeless" translatable="false">Homeless</string>
    <string name="public_transport" translatable="false">Public transport</string>
    <string name="parties_events" translatable="false">Parties, Events</string>
    <string name="shops" translatable="false">Shops</string>
    <string name="save_area">S</string>
    <string name="add" translatable="false">ADD</string>
    <string name="increase_area">I</string>
    <string name="decrease_area">D</string>
    <string name="all" translatable="false">All</string>
    <string name="country" translatable="false">Country</string>
    <string name="city" translatable="false">City</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="car_thefts" translatable="false">Car thefts</string>
    <string name="kids_activities" translatable="false">Kids activities</string>
    <string name="add_comment" translatable="false">ADD COMMENT</string>
    <string name="add_your_comment" translatable="false">ADD YOUR COMMENT</string>
    <string name="description" translatable="false">Description:</string>
    <string name="comments" translatable="false">Comments:</string>
    <string name="rate_this_place" translatable="false">RATE THIS PLACE</string>
    <string name="you_added_rating" translatable="false">"You have already added rating!"</string>
    <string name="edit_place" translatable="false">EDIT PLACE</string>
    <string name="edit_comment" translatable="false">EDIT COMMENT:</string>
    <string name="save" translatable="false">SAVE</string>
    <string name="username" translatable="false">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="change_username" translatable="false">CHANGE USERNAME</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_your_password" translatable="false">Reset your password</string>
    <string name="reset" translatable="false">RESET</string>
    <string name="donate" translatable="false">Donate</string>
    <string name="info" translatable="false">Info &amp; how it works</string>
    <string name="rules" translatable="false">Rules</string>
    <string name="info_howworkss" translatable="false">1. ADD SAFE/NOT SAFE PLACE - there you can add your place\nA) Chose if this place is safe or not by clicking on „Safe” or „Not safe” button\nB) Click on map button to mark place:\n1.B. „I” button is to increase place area\n2.B. „D” button is to decrease place area\n3.B. „S” button is to save marked area\nC) Chose possibility of amenities and dangers. If possibility is very low pick 1 if very big pick 5.\n1.C. „Traffic accidents” how often in this place are traffic accidents\n2.C. „Pickpockets” how often you can meet pickpockets\n3.C. „Kidnapping” how often abductions happen\n4.C. „Homeless” how often you can meet the homeless\n5.C. „Public transport” how well public transport is developed, whether there are bus stops etc.\n6.C. „Parties, Events” how often there are parties in this place\n7.C. „Shops” is there a lot of shops in this place\n8.C „Car thefts” how often there are car thefts\n9.C „Kids activities” is there a lot of playgrounds etc.\nD) Add comment about this place\nE) Click „ADD” button to add place\n2. SEARCH FOR SAFE/NOT SAFE PLACE - select if you want show All, Safe or Not safe places also you can chose in which city places will be showed\nIf you want open place click on white are with type of place address and rating\nIf place is opened you can rate it by clicking on rating number and you can add inifinite number of comments\n3. TOP SAFE/NOT SAFE PLACES - works like SEARCH FOR SAFE/NOT SAFE PLACE but shows only top 10 places.\nRanking is based on place ratings\n4. MY PLACES Shows your places which you can edit by clicking on them Thank you!\nI hope you enjoy using this application\nIf you like this application you can donate me on PayPal by clicking Donate button\n\n</string>
    <string name="send_report" translatable="false">Send report</string>
    <string name="search" translatable="false">SEARCH</string>
    <string name="language">Language</string>
    <string name="permission_rationale" translatable="false">Contacts permissions are needed for providing email completions.</string>
    <string name="pickpockets" translatable="false">Pickpockets</string>
    <string name="myplaces">MyPlaces</string>
    <string name="top_safe">Top Safe</string>
    <string name="top_not_safe">Top Not Safe</string>
    <string name="delete">DELETE</string>
</resources>
