<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


<group>


            <item
                android:id="@+id/nav_report"
                android:title="@string/send_report"
                android:icon="@drawable/ic_send_report"/>

            <item
                android:id="@+id/nav_info"
                android:title="@string/info"
                android:icon="@drawable/ic_info"/>

            <item
                android:id="@+id/nav_donate"
                android:title="@string/donate"
                android:icon="@drawable/ic_donate"/>

            <item
                android:id="@+id/nav_language"
                android:title="@string/language"
                android:icon="@drawable/ic_language" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout"/>


</group>




</menu>
