<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteText"
    tools:context=".Fragments.ShowPlaces"
    android:clickable="true">

    <RadioGroup
        android:id="@+id/groupTypePlaceS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/radioAllS"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textSize="20sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioSafeS"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/safePlace"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioNotSafeS"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/notSafe"
            android:textSize="20sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/city"
        android:textSize="20sp"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/appThemeColor"
        android:layout_marginTop="140dp"/>

    <ListView
        android:id="@+id/listViewPlaces"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp">

    </ListView>


</FrameLayout>