<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fMaps"
    tools:context=".MapsActivity">

    <fragment
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" >

        <Button
            android:id="@+id/buttonIncreaseCircle"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="100dp"
            android:textSize="15sp"
            android:text="@string/increase_area"
            android:layout_marginStart="55dp"/>

        <Button
            android:id="@+id/buttonDecreaseCircle"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginBottom="100dp"
            android:textSize="15sp"
            android:text="@string/decrease_area"
            android:layout_marginStart="205dp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="55dp"
            android:text="@string/save_area"
            android:id="@+id/buttonSaveArea"/>
    </fragment>



</FrameLayout>
