<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.F_EditPlace"
    android:background="@color/whiteText">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/edit_place"
            android:textSize="48sp"
            android:layout_marginTop="20dp"/>


        <RadioGroup
            android:id="@+id/groupTypePlaceE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/radioSafeE"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:text="@string/safePlace"
                android:textSize="20sp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioNotSafeE"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/notSafe"
                android:textSize="20sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/possibility_of_amenities_or_dangers"
            android:layout_gravity="center_horizontal"
            android:textSize="23sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginStart="20dp"
            android:text="@string/traffic_accidents"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonDecreaseTrafficE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="185dp"
            android:layout_marginStart="190dp"
            android:background="@color/whiteText"
            android:text="-"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textViewTrafficE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="185dp"
            android:layout_marginStart="250dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"/>


        <Button
            android:id="@+id/buttonIncreaseTrafficE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="185dp"
            android:layout_marginStart="310dp"
            android:background="@color/whiteText"
            android:text="+"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:layout_marginStart="20dp"
            android:text="@string/pickpockets"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonDecreasePickpocketsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="245dp"
            android:layout_marginStart="190dp"
            android:background="@color/whiteText"
            android:text="-"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textViewPickpocketscE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="245dp"
            android:layout_marginStart="250dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"/>


        <Button
            android:id="@+id/buttonIncreasePickpocketsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="245dp"
            android:layout_marginStart="310dp"
            android:background="@color/whiteText"
            android:text="+"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:layout_marginStart="20dp"
            android:text="@string/kidnapping"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonDecreaseKidnappingE"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="305dp"
            android:background="@color/whiteText"
            android:text="-"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewKidnappingE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="305dp"
            android:layout_marginStart="250dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"/>


        <Button
            android:id="@+id/buttonIncreaseKidnappingE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="305dp"
            android:layout_marginStart="310dp"
            android:background="@color/whiteText"
            android:text="+"
            android:textSize="30sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:layout_marginStart="20dp"
            android:text="@string/homeless"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonDecreaseHomelessE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="365dp"
            android:layout_marginStart="190dp"
            android:background="@color/whiteText"
            android:text="-"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textViewHomelessE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="365dp"
            android:layout_marginStart="250dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"/>


        <Button
            android:id="@+id/buttonIncreaseHomelessE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="365dp"
            android:layout_marginStart="310dp"
            android:background="@color/whiteText"
            android:text="+"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="440dp"
            android:layout_marginStart="20dp"
            android:text="@string/public_transport"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonDecreasePublicTransportE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="425dp"
            android:layout_marginStart="190dp"
            android:background="@color/whiteText"
            android:text="-"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textViewPublicTransportE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="425dp"
            android:layout_marginStart="250dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonIncreasePublicTransportE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="425dp"
            android:layout_marginStart="310dp"
            android:background="@color/whiteText"
            android:text="+"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:layout_marginStart="20dp"
            android:text="@string/parties_events"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonDecreasePartiesE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="485dp"
            android:layout_marginStart="190dp"
            android:background="@color/whiteText"
            android:text="-"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textViewPartiesE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="485dp"
            android:layout_marginStart="250dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonIncreasePartiesE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="485dp"
            android:layout_marginStart="310dp"
            android:background="@color/whiteText"
            android:text="+"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="560dp"
            android:layout_marginStart="20dp"
            android:text="@string/shops"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonDecreaseShopsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="545dp"
            android:layout_marginStart="190dp"
            android:background="@color/whiteText"
            android:text="-"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textViewShopsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="545dp"
            android:layout_marginStart="250dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonIncreaseShopsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="545dp"
            android:layout_marginStart="310dp"
            android:background="@color/whiteText"
            android:text="+"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="620dp"
            android:layout_marginStart="20dp"
            android:text="@string/car_thefts"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonDecreaseCarTheftsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="605dp"
            android:layout_marginStart="190dp"
            android:background="@color/whiteText"
            android:text="-"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textViewCarTheftsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="605dp"
            android:layout_marginStart="250dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonIncreaseCarTheftsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="605dp"
            android:layout_marginStart="310dp"
            android:background="@color/whiteText"
            android:text="+"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="680dp"
            android:layout_marginStart="20dp"
            android:text="@string/kids_activities"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/buttonDecreaseKidsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="665dp"
            android:layout_marginStart="190dp"
            android:background="@color/whiteText"
            android:text="-"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/textViewKidsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="665dp"
            android:layout_marginStart="250dp"
            android:text="1"
            android:gravity="center"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/buttonIncreaseKidsE"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="665dp"
            android:layout_marginStart="310dp"
            android:background="@color/whiteText"
            android:text="+"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:textSize="25sp"
            android:layout_marginTop="745dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit_comment"
            android:gravity="center"/>

        <EditText
            android:layout_width="340dp"
            android:layout_height="90dp"
            android:layout_marginTop="775dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:id="@+id/editCommentE"/>

        <Button
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="865dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/buttonAddPlaceToDBE"
            android:text="@string/save"
            android:textSize="30sp"/>

    </FrameLayout>


</ScrollView>