<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/appThemeColor"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="50dp"
            android:background="@color/mainMenuButtonColor"
            android:text="@string/add_safe_not_safe_place"
            android:textColor="@color/mainMenuButtonTextColor"
            android:id="@+id/buttonAddPlace"
            android:textSize="21sp"/>

        <Button
            android:text="@string/search_for_safe_not_safe_places_around"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:textSize="21sp"
            android:background="@color/mainMenuButtonColor"
            android:textColor="@color/mainMenuButtonTextColor"
            android:id="@+id/buttonSearchSafeNotSafePlaces"/>

        <Button
            android:text="@string/top_safe_not_safe_places"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:textSize="21sp"
            android:background="@color/mainMenuButtonColor"
            android:textColor="@color/mainMenuButtonTextColor"
            android:id="@+id/buttonTopPlaces"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/mainMenuButtonColor"
            android:text="MyPlaces"
            android:textSize="21sp"
            android:textColor="@color/mainMenuButtonTextColor"
            android:id="@+id/buttonMyPlaces"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/appThemeColor" />

    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>